Enable compact object headers